# python-agentframework-demos

./: .env.sample  .gitignore  AGENTS.md  README.md  chat_history.db  plan.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml
.github/prompts/: review_pr_comments.prompt.md  review_slides.prompt.md  update_translations.prompt.md
.github/skills/pdf-to-markdown/: SKILL.md
examples/: agent_basic.py  agent_evaluation.py  agent_evaluation_batch.py  agent_evaluation_generate.py  agent_history_redis.py  agent_history_sqlite.py  agent_knowledge_aisearch.py  agent_knowledge_pg.py  agent_knowledge_pg_rewrite.py  agent_knowledge_postgres.py  agent_knowledge_sqlite.py  agent_mcp_local.py  agent_mcp_remote.py  agent_memory_mem0.py  agent_memory_redis.py  agent_middleware.py  agent_otel_appinsights.py  agent_otel_aspire.py  agent_redteam.py  agent_session.py  agent_summarization.py  agent_supervisor.py  agent_thread.py  agent_thread_redis.py  agent_thread_sqlite.py  agent_tool.py  agent_tools.py  agent_with_subagent.py  agent_without_subagent.py  eval_data.jsonl  eval_results.json  mcp_server.py  openai_tool_calling.py  redis_viewer.py  sqlite_viewer.py  workflow_agents.py  workflow_agents_concurrent.py  workflow_agents_sequential.py  workflow_agents_streaming.py  workflow_aggregator_llm_summary.py  (+19 more)
examples/spanish/: README.md  agent_basic.py  agent_evaluation.py  agent_evaluation_batch.py  agent_evaluation_generate.py  agent_history_redis.py  agent_history_sqlite.py  agent_knowledge_aisearch.py  agent_knowledge_pg.py  agent_knowledge_pg_rewrite.py  agent_knowledge_postgres.py  agent_knowledge_sqlite.py  agent_mcp_local.py  agent_mcp_remote.py  agent_memory_mem0.py  agent_memory_redis.py  agent_middleware.py  agent_otel_appinsights.py  agent_otel_aspire.py  agent_redteam.py  agent_session.py  agent_summarization.py  agent_supervisor.py  agent_tool.py  agent_tools.py  agent_with_subagent.py  agent_without_subagent.py  eval_data.jsonl  expenses.csv  mcp_server.py  openai_tool_calling.py  redis_viewer.py  sqlite_viewer.py  workflow_agents.py  workflow_agents_concurrent.py  workflow_agents_sequential.py  workflow_agents_streaming.py  workflow_aggregator_ranked.py  workflow_aggregator_structured.py  workflow_aggregator_summary.py  (+15 more)
infra/: main.bicep  write_dot_env.ps1  write_dot_env.sh
presentations/english/session-1/: README.md
presentations/english/session-2/: README.md
